--- a/it/index.html
+++ b/it/index.html
@@ -223,7 +223,7 @@
                 <a class="jumbo" href="about.html#cv">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i> Un robot che guarda</h4>
+                        <h4><i class="fa fa-fw fa-check"></i> Computer Vision: streaming video e riconoscimento oggetti</h4>
                         <p class="">La telecamera permette il riconoscimento di oggetti, ostacoli, percorsi, simboli per sviluppare progetti e giochi complessi.</p>
                     </div>
                     <div class="panel-body">
@@ -279,7 +279,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <p>Segui CoderBot su:</p>
-					<ul class="list-unstyled list-inline list-social-icons">
+					<ul class="list-unstyled list-inline list-social-icons list-social-icon-size">
 						<li>
 							<a href="http://www.facebook.com/coderbot" target="new"><i class="fa fa-facebook-square fa-2x"></i></a>
 						</li>
