--- a/en/index.html
+++ b/en/index.html
@@ -202,7 +202,7 @@
             <div class="col-md-6">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i> Coding? Un gioco da bambini</h4>
+                        <h4><i class="fa fa-fw fa-check"></i> Coding? Kid's play</h4>
                         <p class="">L'interfaccia di programmazione presenta livelli di complessità crescenti, adatta dai 6 anni in avanti.</p>
                     </div>
                     <div class="panel-body">
@@ -214,7 +214,7 @@
             <div class="col-md-6">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i> Un robot che guarda</h4>
+                        <h4><i class="fa fa-fw fa-check"></i> Computer Vision: video streaming and object detection</h4>
                         <p class="">La telecamera permette il riconoscimento di oggetti, ostacoli, percorsi, simboli per sviluppare progetti e giochi complessi.</p>
                     </div>
                     <div class="panel-body">
@@ -245,7 +245,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <p>Follow CoderBot on:</p>
-					<ul class="list-unstyled list-inline list-social-icons">
+					<ul class="list-unstyled list-inline list-social-icons list-social-icon-size">
 						<li>
 							<a href="http://www.facebook.com/coderbot" target="new"><i class="fa fa-facebook-square fa-2x"></i></a>
 						</li>
