--- a/it/index.html
+++ b/it/index.html
@@ -207,7 +207,7 @@
                 </a>
             </div>
             <div class="col-md-6">
-                <a class="jumbo" href="about.html#programming">
+                <a class="jumbo" href="about.html#coding_easy">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-check"></i> Coding? Un gioco da bambini</h4>
@@ -220,7 +220,7 @@
                 </a>
             </div>
             <div class="col-md-6">
-                <a class="jumbo" href="about.html#cv">
+                <a class="jumbo" href="about.html#comp_vision">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-check"></i> Computer Vision: streaming video e riconoscimento oggetti</h4>
