--- a/en/about.html
+++ b/en/about.html
@@ -132,8 +132,8 @@
 				<h3>Come è fatto</h3>
                 <p>E' un veicolo con due ruote motrici anteriori indipendenti e un terzo punto di appoggio posteriore costituito da una sfera libera.</p>
 				<p>E' basato su <a href="http://www.raspberrypi.org" target="new">Raspberry PI</a>, un computer completo (CPU, GPU, audio, memoria RAM e flash).</p>
-				<p>Alla scheda principale è collegata una videocamera, una scheda di controllo per i due motori (DC oppure servo) e un adattatore wifi. L'audio è amplificato tramite un altoparlante autoalimentato.</p>
-				<p>Il sistema operativo è Raspbian, una versione di Linux debian specifica per Raspberry, su cui si appoggiano alcune componenti per gestire rete, videocamera, motori e interfaccia utente, quest'ultima realizzata come una web application html5 a sua volta erogata da un web server.</p>
+				<p>Alla scheda principale sono collegati una videocamera, una scheda di controllo per i due motori (DC oppure servo) e un adattatore wifi. L'audio è amplificato tramite un altoparlante autoalimentato.</p>
+				<p>Il sistema operativo è Raspbian, una versione di Linux Debian specifica per Raspberry, su cui si appoggiano alcune componenti per gestire rete, videocamera, motori e interfaccia utente, quest'ultima realizzata come una web application html5 a sua volta erogata da un web server.</p>
                 <h3>Cosa può fare</h3>
                 <p>Il robot è in grado di muoversi su superfici piane: avanti, indietro e ruotare sul posto o curvare con raggi variabili, agendo sulla velocità dei due motori.</p>
                 <img src="../img/easy.jpg" width="400">
