--- a/it/how_to_build_sw.html
+++ b/it/how_to_build_sw.html
@@ -53,7 +53,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/helloworld/it/index.html">CoderBot</a>
+                <a class="navbar-brand" style="padding-top:0px;" href="/helloworld/it/index.html"><img src="../img/coderbot_logo_79.png">CoderBot</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -126,43 +126,50 @@
 				<hr>
 				<p>Questa sezione descrive le componenti Software necessarie a far girare CoderBot</p>
                 <h3>Raspbian</h3>
-                <p>CoderBot si basa sulla distribuzione Linux Raspbian, è opportuno aggiornare sia il firmware che il sistema operativo all'ultima versione disponibile.</p>
+                <p>CoderBot si basa sulla distribuzione Linux <a href="www.raspbian.org">Raspbian</a>, è opportuno aggiornare sia il firmware che il sistema operativo all'ultima versione disponibile.</p>
 				<h4>Installazione</h4>
-				<p>Scaricare il l'immagine di Raspbian e caricarla sulla scheda SD con uno dei seguenti metodi, in base al sistema operativo di cui si dispone.</p>
+				<p>Scaricare il l'<a href="http://www.raspberrypi.org/downloads/">immagine di Raspbian</a> e caricarla sulla scheda SD con uno dei seguenti metodi, in base al sistema operativo di cui si dispone: <a href="">linux</a>, <a href="">osx</a>, <a href="">windows</a>.</p>
                 <h3>UV4L</h3>
                 <p>User-mode driver per Raspberry Camera module, necessario se si usa la Camera.</p>
 				<h4>Installazione</h4>
-				<p>Seguire le istruzioni a questo link.</p>
-                <h3>hostapd</h3>
+				<p>Seguire le istruzioni a questo <a href="https://github.com/previ/coderbot/wiki/Camera-module">link</a>.</p>
+                <h3>hostapd, DNSMasq</h3>
                 <p>Gestione wifi in modalità Access Point.</p>
+                <p>Questo tool permette a CoderBot di gestire una sua rete wifi (nome "coderbot") in questo modo è possibile utilizzarlo in ambienti che non dispongono di una rete wifi aperta e affidabile.</p>
+                <p>La rete ha indirizzamento 10.0.0.x, con CoderBot che risponde sempre come 10.0.0.1</p>
 				<h4>Installazione</h4>
-				<p>Scaricare hostapd, configurare...</p>
-                <h3>DNSMasq</h3>
-                <p>DNS server.</p>
-				<h4>Installazione</h4>
-				<p>Seguire le istruzioni a questo link.</p>
-                <h3>pigpio</h3>
+				<p>Seguire le istruzioni a <a href="https://github.com/previ/coderbot/wiki/Wi-Fi">questo link</a>.</p>
+                <h3>PIGPIO</h3>
                 <p>Libreria per la gestione dei GPIO.</p>
+                <p>Raspberry PI dispone di alcuni I/O "general purpose", ovvero configurabili da software come input oppure output. Tramite questa libreria è possibile configurare, leggere e scrivere gli I/O direttamente da Python.</p>
 				<h4>Installazione</h4>
-				<p>Seguire le istruzioni a questo link.</p>
+				<p>Seguire le istruzioni a <a href="https://github.com/previ/coderbot/wiki/PIGPIO-(GPIO-daemon)">questo link</a>.</p>
                 <h3>ESpeak</h3>
                 <p>Sintesi vocale.</p>
+                <p>Raspberry dispone di una uscita audio analogica che è possibile utilizzare per emettere suoni oppure, tramite questo programma, sintetizzare la voce in diverse lingue e timbri.</p>
 				<h4>Installazione</h4>
-				<p>Seguire le istruzioni a questo link.</p>
+				<p>Seguire le istruzioni a <a href="https://github.com/previ/coderbot/wiki/Audio-and-speech">questo link</a>.</p>
                 <h3>SimpleCV</h3>
                 <p>Framework per la gestione delle immagini, necessario se si usa la camera.</p>
+                <p>Questo framework, che comprende diverse librerie come OpenCV, permette di elaborare le immagini e ricavarne informazioni.</p>
+                <p>Allo stato attuale la libreria OpenCV non è disponibile in versione binaria specifica per Raspberry PI e Camera module, è necessario ricompilarne una versione specifica. L'operazione richiede circa 10-11 ore.</p>                                
 				<h4>Installazione</h4>
-				<p>Seguire le istruzioni a questo link.</p>
+				<p>Seguire le istruzioni a <a href="https://github.com/previ/coderbot/wiki/Camera-module">questo link</a>.</p>
                 <h3>Flask</h3>
                 <p>Il webserver (python) che eroga la webapp.</p>
 				<h4>Installazione</h4>
-				<p>Seguire le istruzioni a questo link.</p>
+				<p>Seguire le istruzioni a <a href="https://github.com/previ/coderbot/wiki/Flask">questo link</a>.</p>
                 <h3>CoderBot runtime</h3>
                 <p>Il software di CoderBot vero e proprio.</p>
+                <p>E' a sua volta composto da alcuni componenti:</p>
+                <ul>
+                  <li>Interfaccia (python) alle risorse del bot (motori e videocamera)</li>
+                  <li>Applicazione HTML5 (python, html, javascript)</li>
+                  <li>Ambiente di programmazione basato su <a href="https://developers.google.com/blockly/">blockly</a> (python, html, javascript)</li>
+                </ul>
 				<h4>Installazione</h4>
-				<p>Seguire le istruzioni a questo link.</p>
+				<p>Seguire le istruzioni a <a href="https://github.com/previ/coderbot/wiki/CoderBot-core">questo link</a>.</p>
             </div>
-
         </div>
         <!-- /.row -->
 
