--- a/it/how_to_build_sw.html
+++ b/it/how_to_build_sw.html
@@ -1,94 +1,8 @@
-<!DOCTYPE html>
-<html>
+---
+layout: it/default
+---
 
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="CoderBot is an open source, raspberry pi robot specialized in teaching kids the basic of robotics and coding.
-">
-    <meta name="author" content="">
-
-    <title>CoderBot - An open, programmable robot</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="/helloworld/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="/helloworld/css/coderbot.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="/helloworld/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    
-    <!-- jQuery Version 1.11.0 -->
-    <script src="/helloworld/js/jquery-1.11.0.js"></script>
-
-    <!-- jQuery Version 1.11.0 -->
-    <script src="/helloworld/js/bootstrap.min.js"></script>
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <link rel="canonical" href="http://coderbot.org/helloworld/it/how_to_build_sw.html">
-</head>
-
-
-  <body>
-    <!-- Page Content -->
-    <div class="container">
-
-    <header class="site-header">
-    <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Navigazione</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" style="padding-top:0px;" href="/helloworld/it/index.html"><img src="../img/coderbot_logo_79.png">CoderBot</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="/helloworld/it/about.html">Cosa è</a>
-                    </li>
-                    <li>
-                        <a href="/helloworld/it/how_to_build_it.html">Come costruirlo</a>
-                    </li>
-                    <li>
-                        <a href="/helloworld/it/projects.html">Gioca e Impara</a>
-                    </li>
-                    <li>
-                        <a href="/helloworld/it/contact.html">Contatti</a>
-                    </li>
-                    <li>
-                        <a href="https://groups.google.com/forum/#!forum/coderbot-users" target="new">Forum</a>
-                    </li>
-                    <li>
-                        <a href="/helloworld/it/blog-home-1.html">Novità</a>
-                    </li>
-                    <li>
-                        <a href="/helloworld/en/index.html">English</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-</header>
-
-
-                <!-- Page Heading/Breadcrumbs -->
+        <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Software
@@ -129,8 +43,10 @@
                 <p>CoderBot si basa sulla distribuzione Linux <a href="www.raspbian.org">Raspbian</a>, è opportuno aggiornare sia il firmware che il sistema operativo all'ultima versione disponibile.</p>
 				<h4>Installazione</h4>
 				<p>Scaricare il l'<a href="http://www.raspberrypi.org/downloads/">immagine di Raspbian</a> e caricarla sulla scheda SD con uno dei seguenti metodi, in base al sistema operativo di cui si dispone: <a href="">linux</a>, <a href="">osx</a>, <a href="">windows</a>.</p>
-                <h3>UV4L</h3>
-                <p>User-mode driver per Raspberry Camera module, necessario se si usa la Camera.</p>
+                <h3>UV4L e SimpleCV</h3>
+                <p>UV4L è uno user-mode driver per Raspberry Camera module, necessario se si usa la Camera.</p>
+                <p>SimpleCV è un framework che comprende diverse librerie come OpenCV e permette di elaborare le immagini e ricavarne informazioni.</p>
+                <p>Allo stato attuale la libreria OpenCV non è disponibile in versione binaria specifica per Raspberry PI e Camera module, è necessario ricompilarne una versione specifica. L'operazione richiede circa 10-11 ore.</p>                                                
 				<h4>Installazione</h4>
 				<p>Seguire le istruzioni a questo <a href="https://github.com/previ/coderbot/wiki/Camera-module">link</a>.</p>
                 <h3>hostapd, DNSMasq</h3>
@@ -149,12 +65,6 @@
                 <p>Raspberry dispone di una uscita audio analogica che è possibile utilizzare per emettere suoni oppure, tramite questo programma, sintetizzare la voce in diverse lingue e timbri.</p>
 				<h4>Installazione</h4>
 				<p>Seguire le istruzioni a <a href="https://github.com/previ/coderbot/wiki/Audio-and-speech">questo link</a>.</p>
-                <h3>SimpleCV</h3>
-                <p>Framework per la gestione delle immagini, necessario se si usa la camera.</p>
-                <p>Questo framework, che comprende diverse librerie come OpenCV, permette di elaborare le immagini e ricavarne informazioni.</p>
-                <p>Allo stato attuale la libreria OpenCV non è disponibile in versione binaria specifica per Raspberry PI e Camera module, è necessario ricompilarne una versione specifica. L'operazione richiede circa 10-11 ore.</p>                                
-				<h4>Installazione</h4>
-				<p>Seguire le istruzioni a <a href="https://github.com/previ/coderbot/wiki/Camera-module">questo link</a>.</p>
                 <h3>Flask</h3>
                 <p>Il webserver (python) che eroga la webapp.</p>
 				<h4>Installazione</h4>
@@ -172,19 +82,3 @@
             </div>
         </div>
         <!-- /.row -->
-
-
-    <hr>
-<footer class="site-footer">
-            <div class="row">
-                <div class="col-lg-12">
-                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />Quest'opera di <a xmlns:cc="http://creativecommons.org/ns#" href="http://coderbot.org" property="cc:attributionName" rel="cc:attributionURL">CoderBot.org</a> è distribuita con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
-                </div>
-            </div>
-</footer>
-
-
-    </div>
-    <!-- /.container -->
-  </body>
-</html>
