--- a/it/index.html
+++ b/it/index.html
@@ -1,104 +1,8 @@
-<!DOCTYPE html>
-<html>
+---
+layout: it/home
+---
 
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="CoderBot is an open source, raspberry pi robot specialized in teaching kids the basic of robotics and coding.
-">
-    <meta name="author" content="">
-
-    <title>CoderBot - An open, programmable robot</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="/helloworld/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="/helloworld/css/coderbot.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="/helloworld/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    
-    <!-- jQuery Version 1.11.0 -->
-    <script src="/helloworld/js/jquery-1.11.0.js"></script>
-
-    <!-- jQuery Version 1.11.0 -->
-    <script src="/helloworld/js/bootstrap.min.js"></script>
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <link rel="canonical" href="http://coderbot.org/helloworld/it/">
-</head>
-
-
-  <body>
-    <!-- Page Content -->
-    <!-- Header Carousel -->
-    <header id="myCarousel" class="carousel slide" style="height:100%;">
-        <!-- Wrapper for slides -->
-            <div class="item active">
-                <div class="fill" style="background-image:url('../img/home_2.jpg');"></div>
-                <!--div class="carousel-caption">
-                    <h2>CoderBot, un robot programmabile orientato alla didattica</h2>
-                </div-->
-            </div>
-     </header>
-    <div class="container">
-
-    <header class="site-header">
-    <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Navigazione</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" style="padding-top:0px;" href="/helloworld/it/index.html"><img src="../img/coderbot_logo_79.png">CoderBot</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="/helloworld/it/about.html">Cosa è</a>
-                    </li>
-                    <li>
-                        <a href="/helloworld/it/how_to_build_it.html">Come costruirlo</a>
-                    </li>
-                    <li>
-                        <a href="/helloworld/it/projects.html">Gioca e Impara</a>
-                    </li>
-                    <li>
-                        <a href="/helloworld/it/contact.html">Contatti</a>
-                    </li>
-                    <li>
-                        <a href="https://groups.google.com/forum/#!forum/coderbot-users" target="new">Forum</a>
-                    </li>
-                    <li>
-                        <a href="/helloworld/it/blog-home-1.html">Novità</a>
-                    </li>
-                    <li>
-                        <a href="/helloworld/en/index.html">English</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-</header>
-
-
-                <!-- Marketing Icons Section -->
+        <!-- Marketing Icons Section -->
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
@@ -113,7 +17,7 @@
                         <p class="">Non è necessario essere esperti di elettronica o di informatica per usarlo.</p>
                     </div>
                     <div class="panel-body">
-                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/easy.jpg" alt="">
+                        <img class="img-responsive img-portfolio img-hover" src="{{site.baseurl}}/img/easy.jpg" alt="">
                     </div>
                 </div>
                 </a>
@@ -126,7 +30,7 @@
                         <p class="">Impara concetti di logica, programmazione e tanto altro, divertendoti.</p>
                     </div>
                     <div class="panel-body">
-                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/learn.jpg" alt="">
+                        <img class="img-responsive img-portfolio img-hover" src="{{site.baseurl}}/img/learn.jpg" alt="">
                     </div>
                 </div>
                 </a>
@@ -139,7 +43,7 @@
                     	<p class="">CoderBot si presta all'uso in classe come strumento di apprendimento esperienziale.</p>
                     </div>
                     <div class="panel-body">
-                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/school.jpg" alt="">
+                        <img class="img-responsive img-portfolio img-hover" src="{{site.baseurl}}/img/school.jpg" alt="">
                     </div>
                 </div>
                 </a>
@@ -155,7 +59,7 @@
                         <p class="">CoderBot è un progetto aperto, sia le componenti software che hardware.</p>
                     </div>
                     <div class="panel-body">
-						<img class="img-responsive img-portfolio img-hover" src="/helloworld/img/open.jpg" alt="">
+						<img class="img-responsive img-portfolio img-hover" src="{{site.baseurl}}/img/open.jpg" alt="">
                     </div>
                 </div>
                 </a>
@@ -168,7 +72,7 @@
                         <p class="">Scarica gli schemi e realizza il tuo coderbot personale a casa o in un makerspace.</p>
                     </div>
                     <div class="panel-body">
-                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/maker.jpg" alt="">
+                        <img class="img-responsive img-portfolio img-hover" src="{{site.baseurl}}/img/maker.jpg" alt="">
                     </div>
                 </div>
                 </a>
@@ -181,7 +85,7 @@
                         <p class="">Modifica, elabora, estendi il progetto in tutti i modi che ti vengono in mente.</p>
                     </div>
                     <div class="panel-body">
-                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/extend.jpg" alt="">
+                        <img class="img-responsive img-portfolio img-hover" src="{{site.baseurl}}/img/extend.jpg" alt="">
                     </div>
                 </div>
                 </a>
@@ -201,7 +105,7 @@
                         <p class="">CoderBot si controlla tramite un comune browser connesso al bot via wifi, non è necessario installare software.</p>
                     </div>
                     <div class="panel-body">
-                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/wifi.png" alt="">
+                        <img class="img-responsive img-portfolio img-hover" src="{{site.baseurl}}/img/wifi.png" alt="">
                     </div>
                 </div>
                 </a>
@@ -214,7 +118,7 @@
                         <p class="">L'interfaccia di programmazione presenta livelli di complessità crescenti, adatta dai 6 anni in avanti.</p>
                     </div>
                     <div class="panel-body">
-                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/coding.png" alt="">
+                        <img class="img-responsive img-portfolio img-hover" src="{{site.baseurl}}/img/coding.png" alt="">
                     </div>
                 </div>
                 </a>
@@ -227,7 +131,7 @@
                         <p class="">La telecamera permette il riconoscimento di oggetti, ostacoli, percorsi, simboli per sviluppare progetti e giochi complessi.</p>
                     </div>
                     <div class="panel-body">
-                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/eye.png" alt="">
+                        <img class="img-responsive img-portfolio img-hover" src="{{site.baseurl}}/img/eye.png" alt="">
                     </div>
                 </div>
                 </a>
@@ -240,7 +144,7 @@
                         <p class="">CoderBot può usare l'altoparlante per comunicare: emettendo suoni o, grazie alla sintesi vocale, frasi definite dal programma.</p>
                     </div>
                     <div class="panel-body">
-                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/speak.png" alt="">
+                        <img class="img-responsive img-portfolio img-hover" src="{{site.baseurl}}/img/speak.png" alt="">
                     </div>
                 </div>
                 </a>
@@ -325,19 +229,3 @@
 
         <hr>
 
-
-
-    <hr>
-<footer class="site-footer">
-            <div class="row">
-                <div class="col-lg-12">
-                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />Quest'opera di <a xmlns:cc="http://creativecommons.org/ns#" href="http://coderbot.org" property="cc:attributionName" rel="cc:attributionURL">CoderBot.org</a> è distribuita con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
-                </div>
-            </div>
-</footer>
-
-
-    </div>
-    <!-- /.container -->
-  </body>
-</html>
