--- a/it/how_to_build_sw.html
+++ b/it/how_to_build_sw.html
@@ -49,7 +49,7 @@ layout: it/default
                 <p>Allo stato attuale la libreria OpenCV non è disponibile in versione binaria specifica per Raspberry PI e Camera module, è necessario ricompilarne una versione specifica. L'operazione richiede circa 10-11 ore.</p>                                                
 				<h4>Installazione</h4>
 				<p>Seguire le istruzioni a questo <a href="https://github.com/previ/coderbot/wiki/Camera-module">link</a>.</p>
-                <h3>hostapd, DNSMasq</h3>
+                <h3>hostAPd, DNSMasq</h3>
                 <p>Gestione wifi in modalità Access Point.</p>
                 <p>Questo tool permette a CoderBot di gestire una sua rete wifi (nome "coderbot") in questo modo è possibile utilizzarlo in ambienti che non dispongono di una rete wifi aperta e affidabile.</p>
                 <p>La rete ha indirizzamento 10.0.0.x, con CoderBot che risponde sempre come 10.0.0.1</p>
