--- a/it/how_to_build_mh.html
+++ b/it/how_to_build_mh.html
@@ -72,7 +72,7 @@ layout: it/default
                 <tr>
                 <td>Telaio acrilico (plexyglass 3mm)</td>
                 <td>1</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9VDhVWmxuOGl0Q28&authuser=0">link</a></td>
                 </tr>
                 <tr>
                 <td>Motori DC</td>
