--- a/it/how_to_build_mh.html
+++ b/it/how_to_build_mh.html
@@ -72,52 +72,52 @@ layout: it/default
                 <tr>
                 <td>Telaio acrilico (plexyglass 3mm)</td>
                 <td>1</td>
-                <td><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9VDhVWmxuOGl0Q28&authuser=0">link</a></td>
+                <td><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9VDhVWmxuOGl0Q28&authuser=0" target="new">link</a></td>
                 </tr>
                 <tr>
                 <td>Motori DC</td>
                 <td>2</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="https://www.olimex.com/Products/RobotParts/GearMotors/MG-6-120/" target="new">link</a> <a href="http://microcontrollershop.com/product_info.php?cPath=315&products_id=5832" target="new">link</a></td>
                 </tr>
                 <tr>
                 <td>Ruote</td>
                 <td>2</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="https://www.olimex.com/Products/RobotParts/Wheels/MG-WHEEL/" target="new">link</a> <a href="http://microcontrollershop.com/product_info.php?products_id=5833" target="new">link</a></td>
                 </tr>
                 <tr>
                 <td>Ruota libera</td>
                 <td>1</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="http://www.leroymerlin.it/catalogo/ruote-e-carrelli/sfera-rotante--15-mm-34104854-p" target="new">link</a></td>
                 </tr>
                 <tr>
                 <td>Distanziali 10mm</td>
                 <td>2</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href=http://it.rs-online.com/web/p/distanziali-esagonali-filettati/1256002/" target="new">link</a></td>
                 </tr>
                 <tr>
                 <td>Distanziali 30mm</td>
                 <td>7</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="http://it.rs-online.com/web/p/distanziali-esagonali-filettati/2808991/" target="new">link</a></td>
                 </tr>
                 <tr>
                 <td>Distanziali 5mm</td>
                 <td>4</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="http://it.rs-online.com/web/p/distanziatore/1364412/" target="new">link</a></td>
                 </tr>
                 <tr>
                 <td>Viti M3x5</td>
                 <td>2</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="#">N/A</a></td>
                 </tr>
                 <tr>
                 <td>Viti M3x10</td>
                 <td>7</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="#">N/A</a></td>
                 </tr>
                 <tr>
                 <td>Viti M2x10</td>
                 <td>4</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="#">N/A</a></td>
                 </tr>
                 </tbody>
                 </table>
@@ -177,12 +177,12 @@ layout: it/default
                 <tr>
                 <td>Ruota libera</td>
                 <td>1</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="http://www.leroymerlin.it/catalogo/ruote-e-carrelli/sfera-rotante--15-mm-34104854-p" target="new">link</a></td>
                 </tr>
                 <tr>
                 <td>Distanziali 30mm maschio-femmina</td>
                 <td>3</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="http://it.rs-online.com/web/p/distanziali-esagonali-filettati/2808991/" target="new">link</a></td>
                 </tr>
                 <tr>
                 <td>Distanziali 40mm maschio-femmina</td>
@@ -197,32 +197,32 @@ layout: it/default
                 <tr>
                 <td>Distanziali 5mm</td>
                 <td>2</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="http://it.rs-online.com/web/p/distanziatore/1364412/" target="new">link</a></td>
                 </tr>
                 <tr>
                 <td>Viti M3x30</td>
                 <td>4</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="#">N/A</a></td>
                 </tr>
                 <tr>
                 <td>Viti M3x5</td>
                 <td>3</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="#">N/A</a></td>
                 </tr>
                 <tr>
                 <td>Viti M3x10</td>
                 <td>2</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="#">N/A</a></td>
                 </tr>
                 <tr>
                 <td>Dadi M3</td>
                 <td>9</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="#">N/A</a></td>
                 </tr>
                 <tr>
                 <td>Rondelle M3</td>
                 <td>6</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="#">N/A</a></td>
                 </tr>
                 </tbody>
                 </table>          
@@ -275,42 +275,42 @@ layout: it/default
                 <tr>
                 <td>Ruota libera</td>
                 <td>1</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="http://www.leroymerlin.it/catalogo/ruote-e-carrelli/sfera-rotante--15-mm-34104854-p" target="new">link</a></td>
                 </tr>
                 <tr>
                 <td>Distanziali 10mm</td>
                 <td>3</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href=http://it.rs-online.com/web/p/distanziali-esagonali-filettati/1256002/" target="new">link</a></td>
                 </tr>
                 <tr>
                 <td>Distanziali 5mm</td>
                 <td>2</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="http://it.rs-online.com/web/p/distanziatore/1364412/" target="new">link</a></td>
                 </tr>
                 <tr>
                 <td>Viti M3x30</td>
                 <td>4</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="#">N/A</a></td>
                 </tr>
                 <tr>
                 <td>Viti M3x5</td>
                 <td>3</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="#">N/A</a></td>
                 </tr>
                 <tr>
                 <td>Viti M3x10</td>
                 <td>2</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="#">N/A</a></td>
                 </tr>
                 <tr>
                 <td>Dadi M3</td>
                 <td>9</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="#">N/A</a></td>
                 </tr>
                 <tr>
                 <td>Biadesivo</td>
                 <td>10cm</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="#">N/A</a></td>
                 </tr>
                 </tbody>
                 </table>
